# openstack-flavor-selector

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml
src/os_flavor_selector/: __init__.py  flavors.py  os_flavor_selector.py  utils.py
tests/: test_flavors.py
