[metadata]
name = os-flavor-selector
description = A tool to filter OpenStack flavors based on resource criteria
version = attr: os_flavor_selector.__version__
author = Thobias Salazar Trevisan
author_email = thobias@thobias.org
url = https://github.com/thobiast/openstack-flavor-selector
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8


[options]
python_requires = >=3.7
include_package_data = True
install_requires =
	openstacksdk
	rich
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    os-flavor-selector = os_flavor_selector.os_flavor_selector:main
